# json-dataset-faker

./: .gitignore  Dockerfile  README.md  pyproject.toml
iac/: iam.tf  lambda.tf  variables.tf
json_dataset_faker/: executor.py  helpers.py  main.py  typedefs.py
tests/: notes.ipynb  request_sample.json
